--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@ footer .wave#wave4 {
 <div id="preloader"></div>
 <nav class="navbar">
   <div class="max-width">
-    <div class="logo"><a href="#">Hem<span>Bdr.</span></a></div>
+    <div class="logo"><a href="#">Hardik<span>Softpulse</span></a></div>
     <ul class="menu">
       <li><a href="#home" class="menu-btn">Home</a></li>
       <li><a href="#about" class="menu-btn">About</a></li>
